# PartyCal

./: .gitlab-ci.yml  LICENSE  README.md  app.config.js  app.config.timestamp_1720271154579.js  app.config.ts  eslint.config.js  memo.txt  memo2.txt  package.json  panda.config.ts  pnpm-lock.yaml  svgo.config.js  tsconfig.json
.github/workflows/: main.yml
.temp/: SetCalender.tsx  SugangAnimate.jsx  memo.txt  new2.tsx  panda.config.ts
public/: s-data.json
public/fonts/css/: basic_4.css  basic_45.css  basic_4567.css  basic_5.css  basic_6.css  basic_67.css  basic_7.css
public/images/: calendar-3d-fix.avif
src/: app.css  app.tsx  entry-server.tsx
src-back/: .env  Cargo.toml
src-back/.sqlx/: query-9f112218698b3d20b6b3c85e4c4ce37e96e8cea8593fc361d2028831bf83cc7d.json
src-back/src/: db.rs  main.rs  services.rs
src-back/src/services/: create.rs  favicon.rs  getdb.rs  vote.rs
src-back/static/: favicon.ico.br
src/assets/: logo_image_2.avif
src/assets/images/: cal-3d.avif  cal_re.avif  calendar-new.avif  calendar_new.avif  calender-3d.avif  load_vid.webm
src/common/: Group.stylex.jsx  animations.tsx  caldrags.tsx  dates.tsx  dragUtils.tsx  drags.tsx  getCalendar.tsx  getCalender.tsx  getDateList.tsx  groups.stylex.ts  helper.jsx  share-styles.ts  share.stylex.ts  shareUrl.ts  store.ts  stores.tsx  useUtils.tsx
src/components/: HomeNewButton.tsx  New2.tsx  SetAlert.tsx  SetBase.tsx  SetCalender.tsx  SetCheckbox.jsx  SetCheckbox.tsx  SetCreate.tsx  SetDialog.tsx  SetMeta.tsx  SetPopUp.tsx  SetSend.tsx  SetShare.tsx  SetShared.tsx  SetSubPage.tsx  SetSwitch.tsx  Spinner.tsx  tileDrag.tsx
src/fonts/css/: basicFonts400.css  basicFonts500.css  basicFonts600.css  basicFonts700.css  basic_400.css  basic_4567.css  basic_500.css  basic_600.css  basic_700.css  basicfontre400.css  basicfontre500.css  basicfontre600.css  basicfontre700.css
src/routes/: [...404].tsx  create.tsx  err.tsx  error.tsx  home.tsx  index.tsx  new.jsx  new.tsx  new2.tsx  r.tsx  s.tsx  search.tsx  share.tsx  test.tsx  v.tsx  vote.tsx
src/routes/api/: session.tsx
src/routes/r/: index.tsx
src/routes/s/: [...id].tsx  [id].tsx  index.tsx
src/routes/v/: [...id].tsx  index.tsx
src/styles/: basicfontre400.css  basicfontre500.css  basicfontre600.css  basicfontre700.css
(+2 files in other folders)
