[package]
name = "partyback"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
blake2 = "0.10.6"
lid = { version = "0.3.0", features = ["base62", "easy"], default-features = false }
ntex = { version = "2.4.0", features = ["compress", "cookie", "tokio"] }
ntex-files = "2.0.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
sqids = "0.4.1"
sqlx = { version="0.8.2", features = ["runtime-tokio", "mysql"]}
tracing = "0.1.40"
tracing-subscriber = "0.3.18"


# Optimize for smaller binary size
[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
lto = true        # Enables link to optimizations
strip = true      # Remove debug symbols
